--- a/example/package.json
+++ b/example/package.json
@@ -16,13 +16,14 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-background-timer": "^2.4.1",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@babel/preset-env": "^7.1.6"
+    "@babel/preset-env": "^7.1.6",
+    "@babel/runtime": "^7.20.0"
   },
   "jest": {
     "preset": "react-native"
