--- a/example/package.json
+++ b/example/package.json
@@ -22,8 +22,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/runtime": "^7.20.0"
+    "@babel/runtime": "^7.20.0",
+    "@babel/preset-env": "^7.1.6"
   },
   "jest": {
     "preset": "react-native"
