--- a/example/package.json
+++ b/example/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-background-timer": "^2.4.1",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.32.0"
   },
